# MLOPS-Monitoring-a-company-s-online-reputation

./: .dockerignore  .flake8  .gitattributes  .gitignore  .huggingface.yaml  Dockerfile  Dockerfile.training  LICENSE  README.md  docker-compose.yml  drift_check.py  gradio_app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: drift_check.py
.github/workflows/: ci_cd.yml  cleanup_cache.yml  training.yml
airflow/dags/: sentiment_pipeline.py
app/: __init__.py  entrypoint.py  inference.py  main.py  metrics.py  requirements.txt  schemas.py
app/ui/: gradio_app.py
data_drift_detection/: __init__.py  baseline.py  detector.py  metrics.py  run_drift_check.py  storage.py
docker/: Dockerfile.api  Dockerfile.training
monitoring/: grafana_dashboard.json  prometheus.yml
tests/: test_api.py  test_api_runtime.py  test_evaluate.py  test_metrics.py  test_storage.py  test_training.py
training/: __init__.py  data_loader.py  evaluate.py  requirements.txt  train.py
